Undo indent in one step

Currently you have to press Ctrl+Z twice to undo an indent. With
this commit, undo will happen in a single step.

BUG: 373009